syntax = "proto3";

package notekeeper;

import public "title.proto";

message Tag {
	string id = 1;
	Title name = 2;
	string created = 4;
	string updated = 5;
}

message GetTagsRequest {
	RequestHeader header = 1;
	string id = 2; // Either a user id or an account id
}

message GetTagsResponse {
	ResponseHeader header = 1;
	repeated Tag tags = 2;
}

message CreateTagRequest {
	RequestHeader header = 1;
	Title name = 2;
	string id = 3; // Either a user id or an account id
}
// Response is an IdResponse

message SaveTagRequest {
	RequestHeader header = 1;
	string id = 2;
	string ownerId = 3; // Either a user id or an account id
	Title name = 5;
}
// Response is an EmptyResponse

message DeleteTagRequest {
	RequestHeader header = 1;
	string id = 2;
	string ownerId = 3; // Either a user id or an account id
}
// Response is an EmptyResponse
